activity feed comment overflow fix

--- a/app/stylesheets/_sidebar.scss
+++ b/app/stylesheets/_sidebar.scss
@@ -727,3 +727,11 @@
 em.placeholder {
   color: #b4b4b4;
 }
+
+.sidebar-panel-content {
+
+  .inline-editor-component {
+    float: left;
+    width: 100%;
+  }
+}
