--- a/app/stylesheets/forms/_email.scss
+++ b/app/stylesheets/forms/_email.scss
@@ -730,12 +730,6 @@
         .inline-autocomplete-component {
           float: left;
           width: 100%;
-
-          &.is-editing {
-            border: none;
-            background: none;
-            padding: 0;
-          }
         }
         .social-medialist-component {
           margin-top: 10px;
